Make sure 'Get Latest' is always visible.
Closes #1

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -78,17 +78,19 @@ nav {
 }
 
 #tweets {
-  h4 {
-    span {
-      @extend .badge;
-      vertical-align: top;
-    }
-
+  h3 {
     a {
       @extend .btn;
       @extend .btn-success;
       @extend .pull-right;
       margin-top: -7px; /* counteract button padding for now */
+    }
+  }
+
+  h4 {
+    span {
+      @extend .badge;
+      vertical-align: top;
     }
   }
 
